adds extension to the emf generator in order to ensure that the appropriate template build variables are set

--- a/de.tud.et.ifa.agtele.eclipse.commons/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                files/,\
                epl-1.0.html,\
                templates/,\
-               MODIFICATIONS.md
+               MODIFICATIONS.md,\
+               plugin.xml
