--- a/de.tud.et.ifa.agtele.eclipse.commons/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="de.tud.et.ifa.agtele.eclipse.commons.ModelSanitizerFactoryRegistry" name="ModelSanitizerFactoryRegistry" schema="schema/de.tud.et.ifa.agtele.eclipse.commons.ModelSanitizerFactoryRegistry.exsd"/>
    <extension
          point="org.eclipse.emf.codegen.ecore.generatorAdapters">
       <adapterFactory
