updates model, regenerates code

--- a/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/plugin.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/plugin.properties
@@ -22,7 +22,7 @@ _UI_MainPage_additionalPages_feature = additionalPages
 _UI_Page_name_feature = name
 _UI_Page_footer_feature = footer
 _UI_Unknown_feature = Unspecified
-
+
 _UI_WebpageEditor_menu = &Webpage Editor
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -49,4 +49,49 @@ _UI_XMLEncodingChoices = UTF-8 ASCII UTF-16 UTF-16BE UTF-16LE ISO-8859-1
 _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
-
+
+_UI_AbstractHTML_type = AbstractHTML
+_UI_SubPage_type = SubPage
+_UI_AbstractKeyVal_type = AbstractKeyVal
+_UI_HtmlInclude_type = HtmlInclude
+_UI_Value_type = Value
+_UI_FileValue_type = FileValue
+_UI_StringValue_type = StringValue
+_UI_Base_type = Base
+_UI_WebPage_outDir_feature = outDir
+_UI_WebPage_resourcesOutPathFragment_feature = resourcesOutPathFragment
+_UI_MainPage_srcPath_feature = srcPath
+_UI_MainPage_suppressMainMenu_feature = suppressMainMenu
+_UI_Page_navIcon_feature = navIcon
+_UI_AbstractHTML_footer_feature = footer
+_UI_AbstractHTML_header_feature = header
+_UI_AbstractHTML_srcPathFragment_feature = srcPathFragment
+_UI_AbstractHTML_scripts_feature = scripts
+_UI_AbstractHTML_styles_feature = styles
+_UI_AbstractHTML_title_feature = title
+_UI_AbstractHTML_staticResources_feature = staticResources
+_UI_SubPage_subPage_feature = subPage
+_UI_AbstractKeyVal_value_feature = value
+_UI_Base_name_feature = name
+_UI_Base_id_feature = id
+_UI_modelEditor_menu = &model Editor
+_UI_modelModelWizard_label = model Model
+_UI_modelModelWizard_description = Create a new model model
+_UI_modelEditor_label = model Model Editor
+_UI_modelEditorFilenameDefaultBase = My
+_UI_modelEditorFilenameExtensions = model
+
+_UI_Editor_menu = & Editor
+_UI_ModelWizard_label =  Model
+_UI_ModelWizard_description = Create a new  model
+_UI_Editor_label =  Model Editor
+_UI_EditorFilenameDefaultBase = My
+_UI_EditorFilenameExtensions = 
+
+_UI_WebPageModelEditor_menu = &WebPageModel Editor
+_UI_WebPageModelModelWizard_label = WebPageModel Model
+_UI_WebPageModelModelWizard_description = Create a new WebPageModel model
+_UI_WebPageModelEditor_label = WebPageModel Model Editor
+_UI_WebPageModelEditorFilenameDefaultBase = My
+_UI_WebPageModelEditorFilenameExtensions = webpagemodel
+
