first working version

--- a/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/plugin.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/plugin.properties
@@ -129,3 +129,5 @@ _UI_AnnouncementLocationEnum_BelowHeading_literal = BELOWHEADING
 _UI_AnnouncementLocationEnum_BelowContent_literal = BELOWCONTENT      
 _UI_AnnouncementLocationEnum_AboveFooter_literal = ABOVEFOOTER      
 _UI_AnnouncementLocationEnum_BelowFooter_literal = BELOWFOOTER
+_UI_AbstractHTML_navName_feature = navName
+_UI_Announcement_disable_feature = disable
