--- a/de.tud.et.ifa.agtele.eclipse.commons.ua/pom.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ua/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.tud.et.ifa.agtele.eclipse.emf.storage.client.ua</groupId>
-  <artifactId>dde.tud.et.ifa.agtele.eclipse.commons.ua</artifactId>
+  <groupId>de.tud.et.ifa.agtele.eclipse.commons.ua</groupId>
+  <artifactId>de.tud.et.ifa.agtele.eclipse.commons.ua</artifactId>
   <version>0.1.0</version>
   <name>de.tud.et.ifa.agtele.eclipse.commons.ua</name>
   <dependencies>
