--- a/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/build.properties
@@ -4,7 +4,9 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               icons/,\
+               schema/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
