tries cleanup so that the class loader would work again

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                icons/,\
                plugin.xml,\
                epl-1.0.html,\
-               MODIFICATIONS.md
+               MODIFICATIONS.md,\
+               src/
