--- a/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/build.properties
@@ -6,7 +6,8 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                icons/,\
-               schema/
+               schema/,\
+               src/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
