--- a/de.tud.et.ifa.agtele.eclipse.commons/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                epl-1.0.html,\
                templates/,\
                MODIFICATIONS.md,\
-               plugin.xml
+               plugin.xml,\
+               src/
