fixes project name and dependency settings

--- a/de.tud.et.ifa.agtele.eclipse.commons.ua/.project
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ua/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.tud.et.ifa.agtele.eclipse.commons.emf.storage.client.ua</name>
+	<name>de.tud.et.ifa.agtele.eclipse.commons.ua</name>
 	<comment></comment>
 	<projects>
 	</projects>
