--- a/de.tud.et.ifa.agtele.eclipse.commons.ua/.classpath
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ua/.classpath
@@ -44,13 +44,15 @@
 	<classpathentry exported="true" kind="lib" path="dependencies/sdk-client-0.6.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/sdk-core-0.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/sdk-core-0.6.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-api-1.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-api-1.7.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-api-1.7.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-api-1.7.21-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-simple-1.7.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/slf4j-simple-1.7.21-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/stack-client-0.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/stack-client-0.6.1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="dependencies/stack-core-0.6.1.jar" sourcepath="dependencies/stack-core-0.6.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="dependencies/stack-core-0.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/stack-core-0.6.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/strict-machine-0.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="dependencies/strict-machine-0.5-sources.jar"/>
