--- a/de.tud.et.ifa.agtele.eclipse.commons.ua/pom.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ua/pom.xml
@@ -15,6 +15,23 @@
   		<artifactId>slf4j-simple</artifactId>
   		<version>1.7.21</version>
   	</dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.0</version>
+        <scope>runtime</scope>
+    </dependency>
+    <!-- dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.0</version>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.14</version>
+    </dependency-->
   </dependencies>
   <build>
   	<defaultGoal>package</defaultGoal>
