removes unnecessary dependencies

--- a/de.tud.et.ifa.agtele.eclipse.commons.ua/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ua/build.properties
@@ -1,11 +1,65 @@
 #
 
-bin.includes = .,\
-               model/,\
+bin.includes = model/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               dependencies/
+               dependencies/,\
+               dependencies/annotations-13.0.jar,\
+               dependencies/annotations-13.0-sources.jar,\
+               dependencies/bcpkix-jdk15on-1.61.jar,\
+               dependencies/bcpkix-jdk15on-1.61-sources.jar,\
+               dependencies/bcprov-jdk15on-1.61.jar,\
+               dependencies/bcprov-jdk15on-1.61-sources.jar,\
+               dependencies/guava-26.0-jre.jar,\
+               dependencies/guava-26.0-jre-sources.jar,\
+               dependencies/istack-commons-runtime-3.0.11.jar,\
+               dependencies/istack-commons-runtime-3.0.11-sources.jar,\
+               dependencies/jakarta.activation-1.2.2.jar,\
+               dependencies/jakarta.activation-1.2.2-sources.jar,\
+               dependencies/jakarta.xml.bind-api-2.3.3.jar,\
+               dependencies/jakarta.xml.bind-api-2.3.3-sources.jar,\
+               dependencies/jaxb-runtime-2.3.3.jar,\
+               dependencies/jaxb-runtime-2.3.3-sources.jar,\
+               dependencies/kotlin-stdlib-1.4.30.jar,\
+               dependencies/kotlin-stdlib-1.4.30-sources.jar,\
+               dependencies/kotlin-stdlib-common-1.4.30.jar,\
+               dependencies/kotlin-stdlib-common-1.4.30-sources.jar,\
+               dependencies/kotlin-stdlib-jdk7-1.4.30.jar,\
+               dependencies/kotlin-stdlib-jdk7-1.4.30-sources.jar,\
+               dependencies/kotlin-stdlib-jdk8-1.4.30.jar,\
+               dependencies/kotlin-stdlib-jdk8-1.4.30-sources.jar,\
+               dependencies/netty-buffer-4.1.54.Final.jar,\
+               dependencies/netty-buffer-4.1.54.Final-sources.jar,\
+               dependencies/netty-channel-fsm-0.5.jar,\
+               dependencies/netty-channel-fsm-0.5-sources.jar,\
+               dependencies/netty-codec-4.1.54.Final.jar,\
+               dependencies/netty-codec-4.1.54.Final-sources.jar,\
+               dependencies/netty-codec-http-4.1.54.Final.jar,\
+               dependencies/netty-codec-http-4.1.54.Final-sources.jar,\
+               dependencies/netty-common-4.1.54.Final.jar,\
+               dependencies/netty-common-4.1.54.Final-sources.jar,\
+               dependencies/netty-handler-4.1.54.Final.jar,\
+               dependencies/netty-handler-4.1.54.Final-sources.jar,\
+               dependencies/netty-resolver-4.1.54.Final.jar,\
+               dependencies/netty-resolver-4.1.54.Final-sources.jar,\
+               dependencies/netty-transport-4.1.54.Final.jar,\
+               dependencies/netty-transport-4.1.54.Final-sources.jar,\
+               dependencies/sdk-client-0.6.1.jar,\
+               dependencies/sdk-client-0.6.1-sources.jar,\
+               dependencies/sdk-core-0.6.1.jar,\
+               dependencies/sdk-core-0.6.1-sources.jar,\
+               dependencies/slf4j-api-1.7.0.jar,\
+               dependencies/slf4j-api-1.7.0-sources.jar,\
+               dependencies/slf4j-simple-1.7.21.jar,\
+               dependencies/slf4j-simple-1.7.21-sources.jar,\
+               dependencies/stack-client-0.6.1.jar,\
+               dependencies/stack-client-0.6.1-sources.jar,\
+               dependencies/stack-core-0.6.1.jar,\
+               dependencies/stack-core-0.6.1-sources.jar,\
+               dependencies/strict-machine-0.5.jar,\
+               dependencies/strict-machine-0.5-sources.jar,\
+               dependencies/txw2-2.3.3.jar,\
+               dependencies/txw2-2.3.3-sources.jar
 jars.compile.order = .
-source.. = src/
 output.. = bin/
