various updates that enable concurrency features during model imports, notifications regarding updating models and model storages fixed behaviour of the model storage update executor that caused previous implementations to update elements more than once fixes to the model storage

--- a/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/plugin.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.emf.storage/plugin.properties
@@ -25,7 +25,7 @@ _UI_Connector_connectionUri_feature = connectionUri
 _UI_ImportAdapter_connector_feature = connector
 _UI_ImportAdapter_model_feature = model
 _UI_Unknown_feature = Unspecified
-
+
 _UI_FileSystemConnector_type = FileSystemConnector
 _UI_ModelStorage_name_feature = name
 _UI_IModelContributor_type = IModelContributor
@@ -40,3 +40,5 @@ _UI_IResolveResult_contributors_feature = contributors
 _UI_IResolveResult_model_feature = model
 _UI_IResolveResult_modelStorage_feature = modelStorage
 _UI_IResolveResult_element_feature = element
+_UI_UpdateableElement_type = UpdateableElement
+_UI_UpdateableElement_updating_feature = updating
