adds sorting feature to project resolve cache adds webpage generator to commons feature

--- a/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/build.properties
@@ -5,7 +5,8 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               templateResources/
+               templateResources/,\
+               model/
 jars.compile.order = .
 source.. = src/
 output.. = bin
