--- a/de.tud.et.ifa.agtele.eclipse.commons/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                templates/,\
                MODIFICATIONS.md,\
                plugin.xml,\
-               src/
+               src/,\
+               schema/
