--- a/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/build.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.webpage.generator/build.properties
@@ -1,12 +1,12 @@
-#
-
 bin.includes = .,\
                icons/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
                templateResources/,\
-               model/
+               model/,\
+               bin/
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+			xtend-gen/
 output.. = bin
